@@ -1,4 +1,4 @@
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.4.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.5.1.min.js"></script>
 <script type="text/javascript" src="/typo3conf/ext/standorte/Resources/Public/js/jquery.tablesorter.min.js"></script>
 <script type="text/javascript">
     
@@ -11,6 +11,9 @@
 
 			if (confirm('Datensatz loeschen?')) {
 				window.location($(this).children('a').attr('href'));
+			}
+			else{
+				return false;
 			}
 		});
     }
