@@ -16,8 +16,8 @@ Tx_Extbase_Utility_Extension::configurePlugin(
 			'Fakultaet' => 'index,list',
 			'Bibliothek' => 'list,listSigelTitel,single' // The first controller and its first action will be the default
 				), array(// An array of non-cachable controller-action-combinations (they must already be enabled)
-			'Fakultaet' => 'index,list',
-			'Bibliothek' => 'index,list'
+//			'Fakultaet' => 'index,list',
+//			'Bibliothek' => 'index,list'
 				)
 );
 
